<resources>
    <string name="app_name">Bora-CARE</string>
    <string name="login">LOG IN</string>
    <string name="logout">LOG OUT</string>
    <string name="signup">SIGN UP..?</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="welcome_message">"Hello, %s Welcome to Esp32"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="name">Bora CARE</string>
    <string name="back">back</string>
    <string name="_0_0">0.0</string>
    <string name="_0">0</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="steps">Steps</string>
    <string name="temp">Temp</string>
    <string name="spoz">SPOZ</string>
    <string name="led">LED</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="health_status">Health Status</string>
    <string name="details">Details</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="BloodPressure">BloodPressure\n</string>
    <string name="pregnancystatus">Pregnancy Status</string>
</resources>