<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vectorwhite"
    tools:context=".Health">

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/matte"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

    <TextView
        android:id="@+id/HearRate"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginTop="120dp"
        android:text="@string/_0_0"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SPOZ"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/_0_0"
        android:textAlignment="center"
        android:textColor="@color/matte"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HearRate" />

    <TextView
        android:id="@+id/Temp"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/_0_0"
        android:textAlignment="center"
        android:textColor="@color/matte"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SPOZ" />

    <TextView
        android:id="@+id/Steps"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/matte"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Temp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/heart_rate"
        app:layout_constraintEnd_toStartOf="@+id/HearRate"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/steps"
        app:layout_constraintEnd_toStartOf="@+id/Steps"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/temp"
        app:layout_constraintEnd_toStartOf="@+id/Temp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/spoz"
        app:layout_constraintEnd_toStartOf="@+id/SPOZ"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heartrate" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/cloudy" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/molecule" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/footprints" />

</androidx.constraintlayout.widget.ConstraintLayout>